-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 7u211, 8u201, jfx12
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8217249 | jfx11.0.2 | Ambarish Rapte | P2 | Resolved | Fixed | |
| JDK-8214950 | openjdk8u212 | Ambarish Rapte | P2 | Resolved | Fixed | |
| JDK-8215147 | 8u202 | Ambarish Rapte | P2 | Resolved | Fixed | b07 |
| JDK-8215145 | 8u201 | Ambarish Rapte | P2 | Closed | Fixed | b08 |
| JDK-8214951 | 7u221 | Ambarish Rapte | P2 | Resolved | Fixed | b01 |
| JDK-8215142 | 7u211 | Ambarish Rapte | P2 | Closed | Fixed | b07 |
ImageView is not rendering the attached image after JDK-8203884
- backported by
-
JDK-8214950 Unable to render cmyk jpeg image
-
- Resolved
-
-
JDK-8214951 Unable to render cmyk jpeg image
-
- Resolved
-
-
JDK-8215147 Unable to render cmyk jpeg image
-
- Resolved
-
-
JDK-8217249 Unable to render cmyk jpeg image
-
- Resolved
-
-
JDK-8215142 Unable to render cmyk jpeg image
-
- Closed
-
-
JDK-8215145 Unable to render cmyk jpeg image
-
- Closed
-
- relates to
-
JDK-8096615 Some jpeg files are rendered incorrectly
-
- Closed
-
-
JDK-8203884 Update libjpeg to version 9c
-
- Resolved
-
(1 backported by, 2 relates to)