8214035: Unable to render cmyk jpeg image

Reviewed-by: kcr, jdv